# rvoip_g729ab

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  PRD.md  README.md  SPECIFICATION.md
docs/: AGENT_BAKEOFF.md  PROOF.md  REFERENCES.md  index.md
docs/implementation/: README.md  appendices.md  phase_01_dsp_math.md  phase_02_tables.md  phase_03_common_dsp.md  phase_04_bitstream.md  phase_05_decoder.md  phase_06_encoder.md  phase_07_vad.md  phase_08_dtx.md  phase_09_cng.md  phase_10_api_cli.md
docs/specification/: README.md  batch_01_dsp_math_tables.md  batch_02_common_dsp_bitstream.md  batch_03_decoder.md  batch_04_encoder.md  batch_05_vad_dtx_cng.md  batch_06_api_cli.md  errata.md
examples/: basic_encode_decode.rs
src/: constants.rs  error.rs  lib.rs  postproc.rs  preproc.rs
src/annex_b/: mod.rs
src/api/: config.rs  decoder.rs  encoder.rs  frame.rs  mod.rs
src/bitstream/: itu_params.rs  itu_serial.rs  itu_serial_tests.rs  mod.rs  pack.rs  unpack.rs
src/codec/: decode.rs  decode_annexb.rs  decode_annexb_bits.rs  decode_sub.rs  decode_sub_helpers.rs  encode.rs  encode_annexb.rs  encode_annexb_helpers.rs  encode_frame.rs  encode_sub.rs  erasure.rs  mod.rs
src/dsp/: arith.rs  arith32.rs  arith32_compat.rs  arith32_ext.rs  div.rs  mod.rs  oper32.rs  random.rs  shift.rs  shift_tests.rs  types.rs
src/filter/: convolve.rs  mod.rs  preemph.rs  resid.rs  syn.rs
src/fixed_cb/: build_code.rs  cor_h.rs  cor_h_cross_a.rs  cor_h_cross_b.rs  correlation.rs  d4i.rs  d4i_finalize.rs  d4i_prepare.rs  d4i_state.rs  (+6 more)
tests/: public_sample_roundtrip.rs
(+78 files in other folders)
